// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersPage renders without errors 1`] = `
<DocumentFragment>
  <div
    class="wrapper-orders"
  >
    <div
      class="container-orders"
    >
      <h2
        class="orders-title"
      >
        Your orders
      </h2>
      <div
        class="order-container--item"
      />
      <div
        class="order-container--item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`testing AuthContainer component renders without errors 1`] = `
<DocumentFragment>
  <div
    class="wrapper-orders"
  >
    <div
      class="container-orders"
    >
      <h2
        class="orders-title"
      >
        Your orders
      </h2>
      <p
        class="order-text__empty"
      >
        Wow, it's empty here
      </p>
    </div>
  </div>
</DocumentFragment>
`;
